# yay

./: .gitignore  CMakeLists.txt  README.md  build.sh  customize.sh  module.prop  post-fs-data.sh  service.sh
.github/workflows/: build.yml
config/: game_config.json  io_config.json  rules.json
src/: appops_table.h  axml_parser.cpp  axml_parser.h  exec_util.cpp  exec_util.h  game_mode.cpp  game_mode.h  hash_util.cpp  hash_util.h  io_scheduler.cpp  io_scheduler.h  json_config.cpp  json_config.h  logger.cpp  logger.h  main_apply.cpp  main_inspect.cpp  main_watch.cpp  mirror_priority.cpp  mirror_priority.h  renice_util.cpp  renice_util.h  rules_engine.cpp  rules_engine.h  zip_reader.cpp  zip_reader.h
src/yay-webui/: index.html  package-lock.json  package.json  vite.config.js
src/yay-webui/public/: config.json
src/yay-webui/src/: App.vue  main.js
src/yay-webui/src/assets/: main.css
src/yay-webui/src/components/icons/: ArrowDown.vue  ArrowUp.vue  Check.vue  ChevronRight.vue  Close.vue  ContentSave.vue  Error.vue  Eye.vue  Game.vue  Gear.vue  Home.vue  Info.vue  Io.vue  Log.vue  Play.vue  Plus.vue  Refresh.vue  Rules.vue  Search.vue  Trash.vue
src/yay-webui/src/components/ui/: AppopPicker.vue  Checkbox.vue  ComponentPicker.vue  DropdownMenu.vue  InfoRow.vue  InputField.vue  LoadingSpinner.vue  MenuItem.vue  Modal.vue  Navigation.vue  RadioButton.vue  Ripple.vue  Snackbar.vue  ToggleSwitch.vue
src/yay-webui/src/helpers/: bridge.js  devMock.js
src/yay-webui/src/router/: index.js
src/yay-webui/src/stores/: games.js  home.js  io.js  log.js  rules.js
src/yay-webui/src/views/: Games.vue  Home.vue  Io.vue  Log.vue  Rules.vue  Settings.vue
webroot/: index.html
webroot/assets/: index-BJuVpJo2.css  index-Bf7feBB5.js  index-Bhvxb62u.js  index-CecJ-CxA.css  index-Cguoj_h-.css  index-Cq7XklOK.js  index-Ctm6LdcO.css  index-Zv-GUzu6.js
